# Insight_Ingenious

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  FIXES_SUMMARY.md  LICENSE  MANIFEST.in  README.md  api_endpoint_verification_report.md  chainlit_test.py  config.yaml  config.yml  docker-compose.yml  errors.txt  infra.bicep  ingen_cli.py  main.py  manifest.in  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_mkdocs.txt  run_azure_container_image_app_installation.ps1  run_container_installation.ps1  run_container_installation_dev.ps1  run_container_installation_prod.ps1  run_http_test.py  run_image_in_podman.ps1  run_ingen_cli.py  run_tests.py  run_tests_http.py  setup.py  start.sh  sync_requirments_and_toml.py  (+4 more)
.chainlit/translations/: bn.json  en-US.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ml.json  mr.json  nl-NL.json  ta.json  te.json  zh-CN.json
.devcontainer/: Dockerfile  devcontainer.json  dockerfile  init-firewall.sh
.github/: copilot-instructions.md  manual_dispatch  manual_trigger  workflows
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  configuration_help.yml  documentation.yml  extension_help.yml  feature_request.yml
.github/prompts/: adocs.prompt.md  compush.prompt.md  gitpull.prompt.md  ltest.prompt.md  merge-pr.prompt.md  merge-stable.prompt.md  mypy.prompt.md  pr-merge.prompt.md  vulture.prompt.md
.github/workflows/: dependency-update.yml  docs.yml  manual.yml  publish.yml  security.yml
agents/: base.py  registry.py
agents/examples/: __init__.py  azure_openai_agent.py  chat_agent.py  research_agent.py  sql_agent.py
api/: __init__.py  agents.py  chat.py  health.py
autogen/extensions/: __init__.py
chainlit/: chainlit.db
conversation_pattern_example/: chainlit_test.py  config.yml  profiles.yml  test_ai_search_agent.py  test_improved_memory.py  test_improved_memory.yml  test_legacy_conversation_pattern.py  test_multitool.py  test_pandas_agent.py  test_sql_agent.py  test_web_critic_agent.py
core/: __init__.py  auth.py  config.py  logging.py
dev_scripts/: run_azure_container_image_app_installation.ps1
dev_scripts/guardrails/: Dockerfile  chatbot.json
docker/: docker.dockerfile  linux_development_image.dockerfile  linux_no_chat_summariser.dockerfile  linux_with_chat_summariser.dockerfile  requirements.txt  run_image_in_podman.ps1
docker/development_images/: linux_development_image_python.dockerfile  linux_development_image_ubuntu.dockerfile
docker/production_images/: linux_no_chat_summariser.dockerfile  linux_with_chat_summariser.dockerfile  linux_with_chat_summariser_dev_no_launch.dockerfile
docker/tester_docker/: linux_with_chat_summariser_dev_no_launch.dockerfile
docker_dev/development_images/: linux_development_image_python.dockerfile
docker_template/production_images/: linux_no_chat_summariser.dockerfile
docs/: AUDIT_REPORT.md  CLI_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  GITHUB_PAGES_SETUP.md  Gemfile  QUICKSTART.md  README.md  REORGANIZATION.md  UV_CLI_README.md  _config.yml  agents.md  api.md  architecture.md  clean_architecture.md  cli.md  code_quality.md  configuration.md  error_handling.md  extensions.md  getting_started.md  index.md  installation.md  quickstart.md  setup.md  testing.md  toc.md
docs/_data/: navigation.yml
docs/_includes/: mermaid.html
docs/_layouts/: mermaid.html
docs/about/: index.md  release_notes.md
docs/api/: README.md  WORKFLOWS.md  agents.md  chat.md  health.md  index.md
docs/architecture/: README.md  agent_system.md  api_layer.md  core_components.md  index.md  integration_points.md  memory-and-tokens.md  streaming-responses.md
docs/components/: README.md
docs/configuration/: README.md
docs/developer_guide/: applications_setup.md  deployment.md  folder_structure.md  how_to_use.md  index.md  overview.md  package_install.md  repo_setup.md  service_prefabs.md  step_1_applications_setup.md  step_2_repo_setup.md  step_3_deployment.md
docs/development/: README.md
docs/documentation_guide/: index.md  overview.md
docs/examples/: advanced_scenarios.md  api_integration.md  basic_usage.md  custom_agents.md  index.md
docs/extensions/: README.md  conversation-patterns.md  custom-agents.md  custom-templates.md  flow-implementation.md
docs/getting-started/: README.md  configuration.md  installation.md  troubleshooting.md
docs/getting_started/: chainlit.md  config_file.md  how_to_use.md  index.md  installation.md  profile_file.md  your_first_conversation.md
docs/guides/: README.md  api-integration.md  authentication.md  azure-blob-storage-setup.md  azure-sql-setup.md  azure_openai.md  complete-azure-deployment.md  configuration.md  custom_agents.md  deployment.md  full-azure-deployment.md  index.md  lessons-learned-azure-blob-integration.md  package_management.md  sql-agent-setup.md  web-interface.md
docs/optional_dependencies/: README.md
docs/quick_onboarding/: APIIntegration.md  ConversationPattern.md  CustomAgent.md  CustomTemplates.md  FlowImplementation.md  GettingStarted.md  README.md
docs/troubleshooting/: README.md
docs/usage/: README.md
examples/: __init__.py  basic_usage_new.py  custom_agents.py
guardrail/: test.py
guardrails/: test.py
ingenious/: __init__.py  cli.py  cli_backup.py  dependencies.py  main.py  run_tests.py
ingenious.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ingenious_extensions/: __init__.py  config.template.yml  profiles.template.yml
ingenious_prompt_tuner/: README.md  __init__.py  auth.py  cli.py  config.py  event_handler.py  event_processor.py  models.py  payload.py  prompts.py  response_wrapper.py  responses.py  run_flask_app.py  utilities.py
ingenious_prompt_tuner_sv/: package-lock.json  package.json  svelte.config.js
scripts/: migrate_config.py  populate_azure_search.py  upload_bike_templates.py
site/: 404.html  index.html  sitemap.xml
tests/: README.md  conftest.py  run_tests.py
tmp/: context.md  high_level_logs.db  high_level_logs.log.db
(+727 files in other folders)
